--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<link rel="stylesheet" href="./src/assets/fonts/poppins/poppins.css" />
 
 		<script src="./src/assets/js/menu.js" defer></script>
+		<script src="./src/assets/js/map.js" defer></script>
 		<title>Vite + React + TS</title>
 	</head>
 	<body>
