--- a/index.html
+++ b/index.html
@@ -2,17 +2,22 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+		<!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link
 			rel="stylesheet"
 			href="./src/assets/fonts/fontawesome-free-6.1.2-web/css/all.min.css"
 		/>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+		/>
 		<link rel="stylesheet" href="./src/assets/fonts/poppins/poppins.css" />
 
 		<script src="./src/assets/js/menu.js" defer></script>
 		<script src="./src/assets/js/map.js" defer></script>
-		<title>Vite + React + TS</title>
+		<title>Julian Miranda</title>
 	</head>
 	<body>
 		<div id="root"></div>
